--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ p{
 <div class="box">
   <h1>IRAN GAME ROLE PLAY</h1>
   <p>به سرور رسمی IRAN GAME ROLE PLAY خوش آمدید</p>
-  <p>🎮 GTA V RP</p>
+  <p>🎮 GTA san RP</p>
   <p>📌 قوانین | دیسکورد | دانلود</p>
 </div>
 
