--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@ body{
 }
 .box{
   background:white;
-  margin:40px;
+  margin:40px auto;
   padding:30px;
   border-radius:20px;
+  max-width:400px;
+}
+.logo{
+  width:120px;
+  margin-bottom:15px;
 }
 h1{
   color:black;
@@ -27,6 +32,8 @@ p{
 <body>
 
 <div class="box">
+  <img src="logo.png" alt="IRAN GAME ROLE PLAY" class="logo">
+
   <h1>IRAN GAME ROLE PLAY</h1>
   <p>به سرور رسمی IRAN GAME ROLE PLAY خوش آمدید</p>
   <p>🎮 GTA san RP</p>
