--- a/index.html
+++ b/index.html
@@ -3,32 +3,45 @@
 <head>
 <meta charset="UTF-8">
 <title>IRAN GAME ROLE PLAY</title>
+
 <style>
 body{
   margin:0;
   font-family:tahoma;
-  background:linear-gradient(to bottom, green, white, red);
+  min-height:100vh;
+  background:linear-gradient(135deg, green, white, red);
+  display:flex;
+  justify-content:center;
+  align-items:center;
   text-align:center;
 }
+
 .box{
   background:white;
-  margin:40px auto;
   padding:30px;
   border-radius:20px;
   max-width:400px;
+  width:90%;
+  box-shadow:0 10px 30px rgba(0,0,0,0.3);
 }
+
 .logo{
   width:120px;
   margin-bottom:15px;
 }
+
 h1{
   color:black;
+  margin-bottom:10px;
 }
+
 p{
   color:#333;
+  margin:8px 0;
 }
 </style>
 </head>
+
 <body>
 
 <div class="box">
@@ -37,7 +50,7 @@ p{
   <h1>IRAN GAME ROLE PLAY</h1>
   <p>به سرور رسمی IRAN GAME ROLE PLAY خوش آمدید</p>
   <p>🎮 GTA san RP</p>
-  <p>📌 قوانین | دیسکورد | دانلود</p>
+  <p>📌 قوانین | تلگرام | دانلود</p>
 </div>
 
 </body>
