--- a/index.html
+++ b/index.html
@@ -39,6 +39,36 @@ p{
   color:#333;
   margin:8px 0;
 }
+
+.players{
+  margin-top:10px;
+  font-weight:bold;
+}
+
+.status{
+  margin-top:8px;
+  font-weight:bold;
+}
+
+.online{
+  color:#0f9d58;
+}
+
+.offline{
+  color:#db4437;
+}
+
+.join-btn{
+  display:block;
+  margin:15px auto 0;
+  padding:12px;
+  width:100%;
+  background:#0f9d58;
+  color:white;
+  text-decoration:none;
+  border-radius:10px;
+  font-weight:bold;
+}
 </style>
 </head>
 
@@ -49,9 +79,42 @@ p{
 
   <h1>IRAN GAME ROLE PLAY</h1>
   <p>به سرور رسمی IRAN GAME ROLE PLAY خوش آمدید</p>
-  <p>🎮 GTA san RP</p>
+  <p>🎮 GTA SAN RP</p>
+
+  <p class="players" id="players">⏳ در حال دریافت اطلاعات...</p>
+  <p class="status" id="status">⏳ بررسی وضعیت سرور...</p>
+
+  <a class="join-btn" href="samp://5.57.35.73:7777">
+    ▶️ Join Server
+  </a>
+
   <p>📌 قوانین | تلگرام | دانلود</p>
 </div>
+
+<script>
+const ip = "5.57.35.73:7777";
+const maxPlayers = 250;
+const api = "https://api.sampquery.info/api/players/" + ip;
+
+fetch(api)
+  .then(res => res.json())
+  .then(data => {
+    document.getElementById("players").innerText =
+      "👥 پلیر آنلاین: " + data.players + " / " + maxPlayers;
+
+    const statusEl = document.getElementById("status");
+    statusEl.innerText = "🟢 وضعیت سرور: آنلاین";
+    statusEl.classList.add("online");
+  })
+  .catch(() => {
+    document.getElementById("players").innerText =
+      "👥 پلیر آنلاین: 0 / 250";
+
+    const statusEl = document.getElementById("status");
+    statusEl.innerText = "🔴 وضعیت سرور: آفلاین";
+    statusEl.classList.add("offline");
+  });
+</script>
 
 </body>
 </html>
